// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v([...]) v([]) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": null,
  },
]
`;

exports[`v([...]) v([]) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": false,
  },
]
`;

exports[`v([...]) v([]) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": Array [],
  },
]
`;

exports[`v([...]) v([]) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": Object {},
  },
]
`;

exports[`v([...]) v([]) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": 1,
  },
]
`;

exports[`v([...]) v([]) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": 0,
  },
]
`;

exports[`v([...]) v([]) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": NaN,
  },
]
`;

exports[`v([...]) v([]) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": undefined,
  },
]
`;

exports[`v([...]) v([]) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": true,
  },
]
`;

exports[`v([...]) v([1, '2']) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": 2,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": 2,
  },
]
`;

exports[`v([...]) v([1, '2']) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": "1",
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": "1",
  },
]
`;

exports[`v([...]) v([1, '2']) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": null,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": null,
  },
]
`;

exports[`v([...]) v([1, '2']) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": false,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": false,
  },
]
`;

exports[`v([...]) v([1, '2']) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Array [],
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": Array [],
  },
]
`;

exports[`v([...]) v([1, '2']) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Object {},
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": Object {},
  },
]
`;

exports[`v([...]) v([1, '2']) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": 0,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": 0,
  },
]
`;

exports[`v([...]) v([1, '2']) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": NaN,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": NaN,
  },
]
`;

exports[`v([...]) v([1, '2']) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": undefined,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": undefined,
  },
]
`;

exports[`v([...]) v([1, '2']) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": true,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": "2",
    },
    "value": true,
  },
]
`;

exports[`v([...]) v([1, 2]) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": "2",
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": "2",
  },
]
`;

exports[`v([...]) v([1, 2]) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": "1",
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": "1",
  },
]
`;

exports[`v([...]) v([1, 2]) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": null,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": null,
  },
]
`;

exports[`v([...]) v([1, 2]) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": false,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": false,
  },
]
`;

exports[`v([...]) v([1, 2]) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Array [],
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": Array [],
  },
]
`;

exports[`v([...]) v([1, 2]) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Object {},
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": Object {},
  },
]
`;

exports[`v([...]) v([1, 2]) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": 0,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": 0,
  },
]
`;

exports[`v([...]) v([1, 2]) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": NaN,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": NaN,
  },
]
`;

exports[`v([...]) v([1, 2]) 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": undefined,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": undefined,
  },
]
`;

exports[`v([...]) v([1, 2]) 10`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": true,
  },
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 2,
    },
    "value": true,
  },
]
`;

exports[`v([...]) v([1]) 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": null,
  },
]
`;

exports[`v([...]) v([1]) 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": false,
  },
]
`;

exports[`v([...]) v([1]) 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Array [],
  },
]
`;

exports[`v([...]) v([1]) 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": Object {},
  },
]
`;

exports[`v([...]) v([1]) 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": 0,
  },
]
`;

exports[`v([...]) v([1]) 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": NaN,
  },
]
`;

exports[`v([...]) v([1]) 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": undefined,
  },
]
`;

exports[`v([...]) v([1]) 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Primitive",
      "value": 1,
    },
    "value": true,
  },
]
`;
